fix nav spacing

--- a/libraries/basset/nav.less
+++ b/libraries/basset/nav.less
@@ -98,7 +98,7 @@ Basset Nav Styling Mixins
 						padding-left:6px;
 						vertical-align: middle;
 						height: 18px;
-						margin-top: -8px;
+						margin-top: -2px;
 					}
 
 					&:hover {
